tests/NormalTests/paczka2/big_fuzzy/13636353.err
Error in line 3: S302 S948 34,4
Error in line 1: hzOkBAD A953 98,5
Error in line 12: NrJGqsEe0oz S948 1,8
Error in line 20: hzOkBAD A953 90,7
Error in line 15: NrJGqsEe0oz A852 60,8
Error in line 33: NrJGqsEe0oz A852 63,5
Error in line 38: S302 S302 12,9
Error in line 42: kS3b2hD S302 75,1
Error in line 54: NrJGqsEe0oz A953 29,3
Error in line 51: hzOkBAD A953 29,4
Error in line 69: aViJTPO S302 32,2
Error in line 88: kS3b2hD A852 97,3
Error in line 89: kS3b2hD S302 63,4
Error in line 92: aViJTPO A852 14,1
Error in line 95: kS3b2hD S948 5,7
Error in line 99: JAouM S948 12,4
Error in line 106: JAouM A953 37,0
Error in line 123: aViJTPO A852 59,1
Error in line 124: aViJTPO S302 25,1
Error in line 85: 9R3Mr9FD A852 66,2
Error in line 137: aViJTPO S302 37,9
Error in line 140: 9R3Mr9FD S948 19,2
Error in line 158: NrJGqsEe0oz A852 -3,3
Error in line 161: NrJGqsEe0oz A953 {7,2
Error in line 154: NrJGqsEe0oz A852 91,5
Error in line 164: aViJTPO S948 3,4
Error in line 165: aViJTPO A953 97,8
Error in line 136: hzOkBAD S302 7,7
Error in line 169: hzOkBAD S948 79,0
Error in line 168: NrJGqsEe0oz A953 80,0
Error in line 171: hzOkBAD A953 71,9
Error in line 174: hzOkBAD S948 53,5
Error in line 187: 9R3Mr9FD A953 46,7
Error in line 188: 9R3Mr9FD S302 23,5
Error in line 217: NrJGqsEe0oz A953 78,2
Error in line 212: aViJTPO S948 82,3
Error in line 225: ~R3Mr~FD A~53 4,6
Error in line 236: aViJTPO S302 20,5
Error in line 226: 9R3Mr9FD A953 11,2
Error in line 247: kS3b2hD A953 69,9
